app/assets/stylesheets/application/navbar.sass
.navbar
  background: #333
  height: 45px
  border: none
  border-radius: 0
  box-shadow: 0 2px 4px 0 rgba(#000, 0.1)
  padding: 11px 0
  margin: 0
  // WIP
  position: fixed
  width: 100%
  z-index: 999
  @media only screen and (max-width: 1000px)
    padding: 11px 20px
  .navbar-right
    margin-right: 0
  .logo
    position: absolute
    left: 0
    top: 50%
    margin-top: -10px
    width: 140px
    height: 21px
    background-image: image-url("logo_navbar.png")
    background-repeat: no-repeat
    background-size: contain
    display: inline-block

